# phrydy

./: .gitattributes  .gitignore  .python-version  .readthedocs.yml  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README_template.rst  _generate-readme.py  beetsdiff.sh  description  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test.sh  test_doc.py  tox.ini
.github/workflows/: main.yml  publish-to-pypi.yml  tests.yml
doc/source/: conf.py  index.rst  modules.rst  phrydy.rst
docs/: conf.py  phrydy.rst  requirements.in  requirements.txt
examples/: list-all-fields.py
phrydy/: __init__.py  _version.py  debug.py  doc.py  doc_generator.py  field_docs.py  mediafile.py  mediafile.pyi  mediafile_extended.py  utils.py
test/: _common.py  helper.py  test_doc.py  test_edge.py  test_interface.py  test_mediafile.py  test_mediafile_edge.py  test_mediafile_extended.py  test_phrydy_debug.py  test_phrydy_new_fields.py
test/files/: mb.m4a  mb.mpc  mb.opus
tests/: _common.py  helper.py  test_basic.py  test_doc.py  test_interface.py  test_mediafile.py  test_mediafile_edge.py  test_mediafile_extended.py  test_phrydy_debug.py  test_phrydy_new_fields.py  test_real_world.py  test_real_world_bach_weihnachts.py  test_real_world_no_meta.py  test_real_world_sex_pistols.py  testall.py
tests/files/: mb.aiff  mb.alac.m4a  mb.ape  mb.flac  mb.wma  mb.wv
typings/mediafile/: __init__.pyi
typings/mediafile/mutagen/: __init__.pyi
typings/mediafile/mutagen/asf/: __init__.pyi
typings/mediafile/mutagen/id3/: __init__.pyi
typings/mediafile/mutagen/mp3/: __init__.pyi
typings/mediafile/mutagen/mp4/: __init__.pyi
typings/mediafile/sphinx/: __init__.pyi
typings/mediafile/sphinx_rtd_theme/: __init__.pyi
