[tool.poetry]
name = "phrydy"
version = "3.2.0"
description = "Template and Macros Expansion for Path names."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]
repository = "https://github.com/Josef-Friedrich/phrydy"

[tool.poetry.dependencies]
python = "^3.8"
ansicolor = "^0.3.2"
mediafile = "^0.9.0"
typing-extensions = "^4.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
autopep8 = "^1.6.0"
readme-patcher = "^0.5.0"
stdout-stderr-capturing = "^0.2.0"
tox = "^3.25.1"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
phrydy-debug = "phrydy.debug:init_cli"
